fixing appset for metallb

--- a/metallb/application.yaml
+++ b/metallb/application.yaml
@@ -9,7 +9,7 @@ spec:
       repoURL: https://github.com/jonathank42/defconk8s.git
       revision: HEAD
       files:
-      - path: clusters/utility/*.json
+      - path: clusters/utility.json
 
   template:
     metadata:
