--- a/metallb/overlays/in-cluster/kustomization.yaml
+++ b/metallb/overlays/in-cluster/kustomization.yaml
@@ -8,7 +8,7 @@ patches:
 - patch: |-
     - op: replace
       path: /spec/addresses
-      value: "10.100.10.11-10.100.10.19"
+      value: 10.100.10.11-10.100.10.19
   target:
     kind: IPAddressPool
     name: first-pool
